syntax = "proto3";// 协议为proto3

package protobuf.keeplive;
// 定义发送请求信息
option go_package = ".;protobuf_keeplive";
message SimpleRequest{
    // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
    // 参数类型 参数名 标识号(不可重复)
    string data = 1;
}

// 定义响应信息
message SimpleResponse{
    // 定义接收的参数
    // 参数类型 参数名 标识号(不可重复)
    int32 code = 1;
    string value = 2;
}
// EchoRequest is the request for echo.
message EchoRequest {
    string message = 1;
}

// EchoResponse is the response for echo.
message EchoResponse {
    string message = 1;
}
// 定义我们的服务（可定义多个服务,每个服务可定义多个接口）
service Simple{
    // UnaryEcho is unary echo.
    rpc UnaryEcho(EchoRequest) returns (EchoResponse) {}
    rpc Route (SimpleRequest) returns (SimpleResponse){};
}